# ml-api

./: README.md  detectron_api.py  main.ipynb  pyproject.toml  run_server.txt  streamlitapp_detecton2.py  streamlitapp_detectron2.py  try_detectron2_api.ipynb
