[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Sow Liu <sowlu0522@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
